--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   },
   "dependencies": {
     "@expo-google-fonts/lato": "^0.2.3",
+    "@expo/webpack-config": "^18.0.1",
     "expo": "~48.0.11",
     "expo-font": "~11.1.1",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-status-bar-height": "^2.6.0",
+    "react-native-web": "~0.18.10",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
