--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "tunnel": "npx expo start --tunnel",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "tunnel": "npx expo start --tunnel"
   },
   "dependencies": {
     "@expo-google-fonts/lato": "^0.2.3",
@@ -18,7 +18,7 @@
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.6",
+    "react-native": "0.71.7",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-web": "~0.18.10",
     "styled-components": "^5.3.9"
