--- a/package.json
+++ b/package.json
@@ -12,16 +12,22 @@
   "dependencies": {
     "@expo-google-fonts/lato": "^0.2.3",
     "@expo/webpack-config": "^18.0.1",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/stack": "^6.3.16",
     "@types/react-native-vector-icons": "^6.4.13",
     "expo": "~48.0.11",
     "expo-font": "~11.1.1",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
+    "install": "^0.13.0",
+    "npm": "^9.6.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.7",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-paper": "^5.7.0",
     "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.10",
