--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@expo-google-fonts/lato": "^0.2.3",
     "@expo/webpack-config": "^18.0.1",
     "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
     "@types/react-native-vector-icons": "^6.4.13",
     "expo": "~48.0.11",
